# stellaris-techtree

./: Cargo.toml  LICENSE  README.md  log4rs.yaml
src/: collection.rs  console.rs  data.rs  localisation.rs  main.rs  tech_tree.rs
stellaris-localisation-parser/: Cargo.toml
stellaris-localisation-parser/src/: lib.rs
stellaris-tech-tree/: package.json  vite.config.js
stellaris-tech-tree/src/: App.vue
stellaris-tech-tree/src/assets/: tech_tree.json
stellaris-tech-tree/src/assets/css/: tech-tree.css
stellaris-tech-tree/src/components/: HelloWorld.vue  TechTree.vue
