[package]
name = "stellaris-techtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
jomini = "0.19"
rayon = "1"
chumsky = "0.8"
strip_bom = "1"
ariadne = "0.1"
anyhow = "1"