[package]
name = "stellaris-techtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
jomini = { git = "https://github.com/rakaly/jomini.git", revision = "a4d641f" }
rayon = "1"
strip_bom = "1"
ariadne = "0.1"
anyhow = "1"
log = "*"
pretty_env_logger = "0.4"
log4rs = "1"
measure_time = "0.8"
trie-rs = "0.1"
trim-in-place = "0.1"
regex = "1"
serde_json = "1"
walkdir = "2"
itertools = "0.10"
crossbeam-channel = "0.5"
strum = "0.24"
strum_macros = "0.24"
memmap2 = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs"] }
simd-json = "0.6"

logos = "0.12"
logos-derive = "0.12"

mimalloc = "0.1"



[workspace]
members = [
    "stellaris-localisation-parser"
]